--- a/demo/touch-controls.html
+++ b/demo/touch-controls.html
@@ -31,7 +31,8 @@
 
             <a-entity id="camera-wrapper" position="0 1.6 0">
                 <!-- it seems disabling look controls leaves camera on floor -->
-                <a-camera look-controls="enabled: false; pointerLockEnabled: false" near="0.001" wasd-controls>
+                <!-- <a-camera look-controls="enabled: false; pointerLockEnabled: false" near="0.001" wasd-controls> -->
+                <a-camera near="0.001" >
                     <a-cylinder id="fing-longer" position="0.2 -0.4 -0.9" radius="0.01" height= "1.0" rotation="90 0 0" color="beige" opacity="1.0"></a-cylinder>
                     <a-entity position="0.2 -0.4 -1.4" cursor="rayOrigin: entity; showLine: true;" raycaster="showLine: true; far: 16" line="color: white; opacity:0.5">
                         <!-- <a-image src="lamb.png" rotation="-90 0 0"></a-image> -->
