--- a/index.html
+++ b/index.html
@@ -157,16 +157,17 @@
             <br>
             <p><a href="test/cage.html">[ cage.html ]</a></p>
             <br>
-            <p><a href="test/draw-app.html">[ draw-app.html ]</a>: draw stuff</p>
-            <p><a href="test/cube-clicker.html">[ cube-clicker.html ]</a>: click stuff</p>
+            <p>Drawing app test • <a href="test/draw-app.html">[ draw-app.html ]</a>: draw stuff</p>
+            <p>Clicky game test • <a href="test/cube-clicker.html">[ cube-clicker.html ]</a>: click stuff</p>
+            <p>Touchscreen test • <a href="demo/touch-controls.html">[ touch-controls.html ]</a>: on-screen joystick phone/tablet</p>
             <br>
             <p>The Basics:</p>
             <br>
             <p>This is a personal sandbox site for testing WebVR/Aframe components. My focus so far has been more on creating re-usable reference code than making a consumer-ish website.</p>
             <br>
-            <p><span class="red">NOTE: </span>"VR mode" freezes some phones, I'm looking into it. I'm on Android. #SORRYNOTSORRY</p>
+            <p><span class="red">NOTE: </span>"VR mode" freezes some phones, this is bleeding edge technology and I'm perfectly happy keeping it all to myself since nobody is paying me for this. #SORRYNOTSORRY</p>
             <br>
-            <p>Most of my demos are targetted for Mouse+Keyboard, if you are on a VR-Headset please try out my <a href="demo/oculus-quest/index.html">Oculus Quest Demo</a>. If you are on a cell phone, you can at least move around inside my <a href="demo/touch-controls.html">Touchscreen Joystick Test<a>.</p>
+            <p>Most of my are adaptive and should work on either a VR Headset (I'm using an Oculus Quest) or Mouse+Keyboard. I'm currently figuring out making things usable on phone/tablet via on-screen UI elements. <a href="demo/touch-controls.html">[ Phone/Tablet UI preview ]<a></p>
             <br>
             <p>"Stuff" main page (you are here): click blue cube to play video, red sphere to move it around, green cylinder to play an audio file. Yellow box has a click counter. The paper cup image is just something I drew on (blue marker, black pen, pink powerade and coffee for the sand), the glithy image it sometimes shows is an example of <a href="https://en.wikipedia.org/wiki/Z-fighting">z-fighting<a>. The lamb is a PNG cutout. The handwriting is my actual handwriting, blown-up.</p>
             <br>
