--- a/demo/touch-controls.html
+++ b/demo/touch-controls.html
@@ -42,14 +42,78 @@
                 schema: {},
                 foo: () => console.log('bar'),
                 init: function () {
-                    this.camwrapper = document.querySelector('#camera-wrapper')
-                    this.camera = document.querySelector('#camera-actual')
+                    this.camwrapper = document.querySelector('#camera-wrapper');
+                    this.camera = document.querySelector('#camera-actual');
+                    this._active = false;
+                    this._direction = new THREE.Vector2(0, 0);
                     document.addEventListener('DOMContentLoaded', (event) => {
+
+                        // ADD UI TO THE DOM
+                        const div = document.createElement('div');
+                        // no need to make a div in a div
+                        div.innerHTML = `
+                            <div id="overlay">
+                                <p>use this touch-pad to move around</p>
+                            </div>
+                        `;
+                        document.body.appendChild(div);
+
+                        const style = document.createElement('style');
+                        style.innerHTML = `
+                            #overlay {
+                                position:absolute;
+                                bottom:0px;
+                                left:0px;
+                                z-index:1000;
+                                background-color: gray;
+
+                                height: 200px;
+                                width: 200px;
+                                margin: 50px
+                            }
+                        `;
+                        document.head.appendChild(style);
+
                         // avoid accessing properties before initialized,
                         // might be goood to have system methhoods/props check
                         // if system has been fully initialized/loaded, defined
                         // as having camwrapper and all dependencies already be initialized
-                        this.cWrapPos = this.camwrapper.object3D.position
+                        this.cWrapPos = this.camwrapper.object3D.position;
+
+
+                        // https://nunustudio.org/learn/basics/14_joystick/page.html
+                        inputHandler = document.querySelector('a-scene').systems['analog-input-handler-test'];
+                        
+                        // direction = new THREE.Vector2(0, 0);
+
+                        const manager = nipplejs.create({
+                            zone: document.getElementById('overlay'),
+                            color: 'blue'
+                        });
+
+                        // setInterval(function(){
+                        //     if(this._active) {
+                        //         inputHandler.move(this._direction.y, this._direction.x)
+                        //     }
+                        // }, 1000 / 90);
+
+                        manager.on("added", (event, nipple) => {
+                            nipple.on("start", (event, data) => {
+                                this._active = true;
+                            });
+                            nipple.on("move", (event, data) => {
+                                const force = 0.08 * data.force;
+                                this._direction.x = Math.cos(data.angle.radian) * force;
+                                this._direction.y = Math.sin(data.angle.radian) * force;
+                            });
+                            nipple.on("end", (event, data) => {
+                                speed = 0
+                                this._active = false;
+                            });
+                        });
+                        manager.on("removed", (event, nipple) => {
+                            nipple.off("move start end");
+                        });
                     });
 
                     // this.heading = new THREE.Vector3()
@@ -81,7 +145,11 @@
                 //     this.cWrapPos.z += (value * Math.sin(-yRot));
                 //     this.cWrapPos.x += (value * Math.cos(-yRot));
                 // },
-                // // tick: function () {},
+                tick: function () {                    
+                    if(this._active) {
+                        this.move(this._direction.y, this._direction.x)
+                    }
+                },
             })
         </script>
     </head>
@@ -96,8 +164,6 @@
 
 
         <a-scene>
-
-
             <a-assets>
                 <img id="my-image" src="lamb.png">
             </a-assets>
@@ -120,54 +186,16 @@
         </a-scene>
 
         <!-- https://stackoverflow.com/questions/51989945/on-screen-button-for-a-frame-ar -->
-        <div id="overlay" style="position:absolute; bottom:0px; left:0px; z-index:1000; background-color: gray;">
-            <!-- your overlay content here -->
+        <!-- <div id="overlay" style="position:absolute; bottom:0px; left:0px; z-index:1000; background-color: gray;">
             <p>use this touch-pad to move around</p>
-        </div>
-        <style type="text/css">
+        </div> -->
+        <!-- <style type="text/css">
             #overlay {
                 height: 200px;
                 width: 200px;
                 margin: 50px
             }
-        </style>
-        <script type="text/javascript">
-            // https://nunustudio.org/learn/basics/14_joystick/page.html
-            inputHandler = document.querySelector('a-scene').systems['analog-input-handler-test'];
-            
-            direction = new THREE.Vector2(0, 0);
-            pressed = false;
-
-            const manager = nipplejs.create({
-                zone: document.getElementById('overlay'),
-                color: 'blue'
-            });
-
-            setInterval(function(){
-                if(pressed) {
-                    inputHandler.move(direction.y, direction.x)
-                }
-            }, 1000 / 90);
-
-            manager.on("added", function(event, nipple) {
-                nipple.on("start", (event, data) => {
-                    pressed = true;
-                });
-                nipple.on("move", (event, data) => {
-                    const force = 0.08 * data.force;
-                    direction.x = Math.cos(data.angle.radian) * force;
-                    direction.y = Math.sin(data.angle.radian) * force;
-                });
-                nipple.on("end", (event, data) => {
-                    speed = 0
-                    pressed = false;
-                });
-            });
-            manager.on("removed", function(event, nipple) {
-                nipple.off("move start end");
-            });
-        </script>
-        <div></div>
+        </style> -->
 
         <script type="text/javascript">
             // cylinder interaction
