parse excel file into chart

--- a/art/mangogeddon.html
+++ b/art/mangogeddon.html
@@ -37,7 +37,7 @@
         </script>
 
         <a-scene id="scene">
-
+            <!-- FIX THIS FOR QUEST!!! -->
             <a-entity joses-default-interface position="8.2 0 4.9" rotation="0 48 0"></a-entity>
 
             <!-- <a-entity joses-default-interface></a-entity> -->
