--- a/index.html
+++ b/index.html
@@ -157,21 +157,26 @@
             <br>
             <p><a href="test/cage.html">[ cage.html ]</a></p>
             <br>
+            <p>Sorry for the layout, this index page is meant to be seen on a 1200+ pixel wide monitor.</p>
+            <br>
+            <p>COVID-19 CHART • <a href="data/covid-19/viz.html">[ covid-19/viz.html ]</a>: chart</p>
             <p>Drawing app test • <a href="test/draw-app.html">[ draw-app.html ]</a>: draw stuff</p>
             <p>Clicky game test • <a href="test/cube-clicker.html">[ cube-clicker.html ]</a>: click stuff</p>
             <p>Touchscreen test • <a href="demo/touch-controls.html">[ touch-controls.html ]</a>: on-screen joystick phone/tablet</p>
+            <br>
+            <p><a href="/tools">[ RANDOM TOOLS ]</a></p>
             <br>
             <p>The Basics:</p>
             <br>
             <p>This is a personal sandbox site for testing WebVR/Aframe components. My focus so far has been more on creating re-usable reference code than making a consumer-ish website.</p>
             <br>
-            <p><span class="red">NOTE: </span>"VR mode" freezes some phones, this is bleeding edge technology and I'm perfectly happy keeping it all to myself since nobody is paying me for this. #SORRYNOTSORRY</p>
+            <p><span class="red">NOTE: </span>This doesn't support iPhones because Apple isn't on-board with WebXR yet.</p>
             <br>
             <p>Most of my are adaptive and should work on either a VR Headset (I'm using an Oculus Quest) or Mouse+Keyboard. I'm currently figuring out making things usable on phone/tablet via on-screen UI elements. <a href="demo/touch-controls.html">[ Phone/Tablet UI preview ]<a></p>
             <br>
             <p>"Stuff" main page (you are here): click blue cube to play video, red sphere to move it around, green cylinder to play an audio file. Yellow box has a click counter. The paper cup image is just something I drew on (blue marker, black pen, pink powerade and coffee for the sand), the glithy image it sometimes shows is an example of <a href="https://en.wikipedia.org/wiki/Z-fighting">z-fighting<a>. The lamb is a PNG cutout. The handwriting is my actual handwriting, blown-up.</p>
             <br>
-            <p>I apologize by how spartan this mess might look. My R&D focus has been mostly on interactivity and getting the basics down. It took me long enough to get where I am, and my ThreeJS skills are enough to control a <a class="chunky-green" href="https://www.youtube.com/watch?v=MWjKUd7x7O4&list=PLp1h6x4FOZbD1WFxB6FbCl7TboPiQIAH8&index=6&t=0s">ROBOTIC ARM<a> in real-time (from the frontend, via WebSockets). As an "aesthetic" consolation prize, please have this <a href="demo/bench.html">pointy ball thing</a> as proof that I can programmatically place lines and spheres in space and/or create somewhat aesthetically pleasing compositions. Consumer-ish landing page TBA.</p>
+            <p>I apologize by how spartan this mess might look. My R&D focus has been mostly on interactivity and getting the basics down. It took me long enough to get where I am, but fear not: my JavaScript skills are enough to control a <a class="chunky-green" href="https://www.youtube.com/watch?v=MWjKUd7x7O4&list=PLp1h6x4FOZbD1WFxB6FbCl7TboPiQIAH8&index=6&t=0s">ROBOT<a> in real-time (from the Front End!). On the "artsy" side I have <a href="https://jedpimentel.github.io/stuff/art/mangogeddon.html">these</a> <a href="demo/bench.html">two</a> art innstallations.</p>
             <br>
             <p class="quote">"Remember kids, the only difference between screwing around and science is writing it down"<br>&nbsp;&nbsp;&nbsp;&nbsp; - Alex Jason (balistics expert)</p>
             <br>
