screen share proof of concept

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             <br>
             <p>Sorry for the layout, this index page is meant to be seen on a 1200+ pixel wide monitor.</p>
             <br>
+            <p>Screen Share Test • <a href="demo/screen-share.html">[ demo/screen-share.html ]</a>: your screen</p>
             <p>COVID-19 CHART • <a href="data/covid-19/viz.html">[ covid-19/viz.html ]</a>: chart</p>
             <p>Drawing app test • <a href="test/draw-app.html">[ draw-app.html ]</a>: draw stuff</p>
             <p>Clicky game test • <a href="test/cube-clicker.html">[ cube-clicker.html ]</a>: click stuff</p>
