drag and drop interface test

--- a/index.html
+++ b/index.html
@@ -183,7 +183,10 @@
             <p>Desktop Only:</p>
             <p>Screen Share Test • <a href="demo/screen-share.html">[ demo/screen-share.html ]</a>: your screen</p>
             <br>
-            <p><a href="/tools">[ RANDOM TOOLS ]</a></p>
+            <p>2D/flat stuff:</p>
+            <p>Drag and Drop Test • <a href="test/linear-drag-n-drop.html">[ test/linear-drag-n-drop.html ]</a>: drag some squares<!-- </p>
+            <br>
+            <p><a href="/tools">[ RANDOM TOOLS ]</a></p> -->
             <br>
             <p>The Basics:</p>
             <br>
