--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
             <br>
             <p>Desktop Only:</p>
             <p>Screen Share Test • <a href="demo/screen-share.html">[ demo/screen-share.html ]</a>: your screen</p>
-            <br>
-            <p>2D/flat stuff:</p>
-            <p>Drag and Drop Test • <a href="test/linear-drag-n-drop.html">[ test/linear-drag-n-drop.html ]</a>: drag some squares<!-- </p>
+            <p>Drag and Drop Test • <a href="test/linear-drag-n-drop.html">[ test/linear-drag-n-drop.html ]</a>: drag some squares
+            <!-- <br>
+            <p>2D/flat stuff:</p> --><!-- </p>
             <br>
             <p><a href="/tools">[ RANDOM TOOLS ]</a></p> -->
             <br>
